--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 ---
+title: Home
 permalink: /
 layout: default
 ---
 
-<h1>Welcome to Learnmonkey!</h1>
-<p>Welcome to the Learnmonkey website! Currently, Learnmonkey is mostly programming, but we will be expanding to more subjects soon. You can find lessons in the navbar.</p>
+<section>
+    <h1>Welcome to Learnmonkey!</h1>
+    <p>Welcome to the Learnmonkey website! Currently, Learnmonkey is mostly programming, but we will be expanding to more subjects soon. You can find lessons in the navbar.</p>
+</section>
 
+<section>
 <h1>About</h1>
-<h2>Our Mission</h2>
-<p>The mission of Learnmonkey is to provide high-quality educational content for free.</p>
-<h2>Contributing</h2>
-<p>Learnmonkey has a <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> and we would love if you contributed through pull requests and issues.</p>
+    <h2>Our Mission</h2>
+    <p>The mission of Learnmonkey is to provide high-quality educational content for free.</p>
+    <h2>Contributing</h2>
+    <p>Learnmonkey has a <a href="https://github.com/learnmonkey/learnmonkey.github.io">GitHub repository</a> and we would love if you contributed through pull requests and issues.</p>
+</section>
