Add Python logo

--- a/programming/python/index.html
+++ b/programming/python/index.html
@@ -6,6 +6,10 @@ title: Introduction to Python
 <section>
     <h1>What Is Python?</h1>
     <p>Python is a simple but powerful programming language. Python is one of the most popular programming languages and can be used to create everything from websites to artificial intelligence.</p>
+    <figure>
+        <img src="/images/programming/python/python-logo.png" alt="Python Logo">
+        <figcaption>The Python Logo</figcaption>
+    </figure>
 </section>
 
 <section>
