add installing java tutorial

--- a/programming/index.html
+++ b/programming/index.html
@@ -8,7 +8,7 @@ layout: default
     <p>There is lots of programming content on Learnmonkey. Below is a list of programming topics we cover:</p>
     <ul>
         <li><a href="/programming/python/">Python</a></li>
-        <li>Java (coming soon!)</li>
+        <li><a href="/programming/java/">Java</a></li>
         <li>HTML (coming soon!)</li>
         <li>CSS (coming soon!)</li>
         <li>JavaScript (coming soon!)</li>
