--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 ---
 
 <section>
-    <h1>Welcome to Learnmonkey!</h1>
-    <p>Welcome to the Learnmonkey website! Currently, Learnmonkey is mostly programming, but we will be expanding to more subjects soon. You can find lessons in the navbar.</p>
+    <h1>Hello!</h1>
+    <p>Welcome to the Learnmonkey website! Currently, Learnmonkey has only programming lessons, but we will be expanding to more subjects soon. You can find lessons in the navbar.</p>
 </section>
 
 <section>
