Fix Java environment setup page

--- a/programming/java/environment-setup.html
+++ b/programming/java/environment-setup.html
@@ -1,6 +1,7 @@
 ---
 layout: java
 title: Java Environment Setup
+permalink: /programming/java/environment-setup/
 ---
 
 <h1>Java Environment Setup</h1>
