--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 ---
 
 <section>
-    <h1>Hello!</h1>
+    <h1>Hello and welcome to Learnmonkey!</h1>
     <p>Welcome to the Learnmonkey website! Currently, Learnmonkey has only programming lessons, but we will be expanding to more subjects soon. You can find lessons in the navbar.</p>
 </section>
 
