Python hello world tutorial

--- a/programming/python/index.html
+++ b/programming/python/index.html
@@ -37,3 +37,11 @@ title: Introduction to Python
         <li>Basically anything else you can imagine!</li>
     </ul>
 </section>
+
+<section>
+    <h1>Below is a list of prerequisites for this course: </h1>
+    <ul>
+        <li>Basic Computer Skills</li>
+        <li>Basic Command Line Knowledge</li>
+    </ul>
+</section>
