--- a/programming/python/index.html
+++ b/programming/python/index.html
@@ -39,7 +39,8 @@ title: Introduction to Python
 </section>
 
 <section>
-    <h1>Below is a list of prerequisites for this course: </h1>
+    <h1>Prerequisites</h1>
+    <p>Below is a list of prerequisites for this Python course: </p>
     <ul>
         <li>Basic Computer Skills</li>
         <li>Basic Command Line Knowledge</li>
