--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -1,6 +1,7 @@
 ---
 layout: python
 title: Your First Python Program
+permalink: /programming/python/your-first-python-program/
 ---
 
 <h1>Your First Python Program</h1>
@@ -8,11 +9,11 @@ title: Your First Python Program
 
 <section>
     <h2>Writing The Program</h2>
-    <p>Our very first program will simply print out "Hello World!" onto the screen. That might sound boring, but don't worry, in later lessons, you'll learn more advanced syntax.</p>
+    <p>Our very first program will simply print out "Hello World!" onto the screen. That might soudn boring, but don't worry, in later lessons, you'll learn more advanced things.</p>
     <p>So, first, open up a text editor and make a file ending in .py. ".py" is the file extension for Python, which means that all of the file names for Python programs end in .py.</p>
     <p>You can name your file whatever you want, but in this tutorial, I'm calling it "helloworld.py".</p>
     <p>The program only has one line: <code>print("Hello World!")</code></p>
-    <p>Finally, save the file wherever you want. We recommend making a folder called "My Python Programs" or something similar to that so you know where to store your code and where they are located.</p>
+    <p>Finally, save the file.</p>
 </section>
 
 <section>
