--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -9,7 +9,7 @@ permalink: /programming/python/your-first-python-program/
 
 <section>
     <h2>Writing The Program</h2>
-    <p>Our very first program will simply print out "Hello World!" onto the screen. That might soudn boring, but don't worry, in later lessons, you'll learn more advanced things.</p>
+    <p>Our very first program will simply print out "Hello World!" onto the screen. That might sound boring, but don't worry, in later lessons, you'll learn more advanced things.</p>
     <p>So, first, open up a text editor and make a file ending in .py. ".py" is the file extension for Python, which means that all of the file names for Python programs end in .py.</p>
     <p>You can name your file whatever you want, but in this tutorial, I'm calling it "helloworld.py".</p>
     <p>The program only has one line: <code>print("Hello World!")</code></p>
