--- a/programming/python/variables.html
+++ b/programming/python/variables.html
@@ -27,5 +27,5 @@ permalink: /programming/python/variables/
 
 <section>
     <h2>A word a caution</h2>
-    <p>In math class, our teacher told us that x = y is the same as y = x. That doesn't happen in programming. If we do 3 = x, Python would interpret that as setting the value of 3 to x. Nonsense! So, Python would return an error.</p>
+    <p>In math class, our teacher told us that x = y is the same as y = x. That doesn't happen in programming. If we do <code>3 = x</code>, Python would interpret that as setting the value of 3 to x. Nonsense! So, Python would return an error.</p>
 </section>
