--- a/programming/python/variables.html
+++ b/programming/python/variables.html
@@ -19,7 +19,7 @@ permalink: /programming/python/variables/
 </section>
 
 <section>
-    <h2>How do you use Variables?</h2>
+    <h2>How are Variables Used?</h2>
     <p>It's actually very, very simple. Let's say that we want to declare a variable called <var>x</var> and set it to the value of 3.</p>
     <p>We just write <code>x = 3</code>. Simple, right? If we wanted a variable called <var>y</var> to have the value of 4, we write <code>y = 4</code>. Easy peasy.</p>
     <p>If we now want <var>x</var> to be 5, we just do <code>x = 5</code>. Nothing special.</p>
