--- a/programming/python/environment-setup.html
+++ b/programming/python/environment-setup.html
@@ -1,6 +1,7 @@
 ---
 layout: python
 title: Python Environment Setup
+permalink: /programming/python/environment-setup/
 ---
 
 <h1>Python Environment Setup</h1>
