--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -19,8 +19,7 @@ permalink: /programming/python/your-first-python-program/
 <section>
     <h2>Running The Program</h2>
     <p>Go into the terminal and navigate to the folder where you created your Python program.</p>
-    <p>Then, execute the following command: </p>
-    <code>python [filename].py</code>
+    <p>Then, execute the following command: <code>python [filename].py</code></p>
     <p>This tells Python to run the Python program.</p>
     <p>After running the command, you should see the words "Hello World!" printed below your command.</p>
     <p>Yay! You've written and run your first Python program.</p>
