Update programming index page

--- a/programming/index.html
+++ b/programming/index.html
@@ -16,6 +16,16 @@ layout: default
 </section>
 
 <section>
+    <h1>What is Programming?</h1>
+    <p>Programming simply means controlling computers by writing programs.</p>
+</section>
+<section>
     <h1>Why Learn Programming?</h1>
     <p>Programming (at least in our opinion) is quite fun and rewarding. Programming is also a very valuable skill and is quite good for your resume.</p>
+</section>
+<section>
+    <h1>What is a Programming Language?</h1>
+    <p>A programming language, put simply, is the format you write programs in. You can also think of it as a language that programmers communicate to computers with.</p>
+    <p>In the programming world, programming languages often have specific use cases. For example, Python is used for data science and machine learning and JavaScript is used for websites.</p>
+    <p>At Learnmonkey, we teach have many different tutorials on a wide variety of programming languages.</p>
 </section>
