--- a/programming/python/variables.html
+++ b/programming/python/variables.html
@@ -19,13 +19,14 @@ permalink: /programming/python/variables/
 </section>
 
 <section>
-    <h2>How are Variables Used?</h2>
+    <h2>How to Use Variables?</h2>
     <p>It's actually very, very simple. Let's say that we want to declare a variable called <var>x</var> and set it to the value of 3.</p>
-    <p>We just write <code>x = 3</code>. Simple, right? If we wanted a variable called <var>y</var> to have the value of 4, we write <code>y = 4</code>. Easy peasy.</p>
-    <p>If we now want <var>x</var> to be 5, we just do <code>x = 5</code>. Nothing special.</p>
+    <p>We just write <code><pre style='color:#000000;background:#ffffff;'>x <span style='color:#808030; '>=</span> <span style='color:#008c00; '>3</span></pre></code>. Simple, right. If we wanted a variable called <var>y</var> to have the value of 4, we write <code>y = 4</code>. Easy peasy.</p>
+    <p>If we now want <var>x</var> to be 5, we just do <code><pre style='color:#000000;background:#ffffff;'>x <span style='color:#808030; '>=</span> <span style='color:#008c00; '>5</span></pre></code>. Nothing special.</p>
 </section>
 
 <section>
-    <h2>A word of caution</h2>
-    <p>In math, x = y is the same as y = x. That doesn't happen in programming. If we do <code>3 = x</code>, Python would interpret that as setting the value of 3 to x. Nonsense! So, Python would return an error.</p>
+    <h2>A word a caution</h2>
+    <p>In math class, our teacher told us that x = y is the same as y = x. That doesn't happen in programming. If we do <code><pre style='color:#000000;background:#ffffff;'><span style='color:#008c00; '>3</span> <span style='color:#808030; '>=</span> x
+    </pre></code>, Python would interpret that as setting the value of 3 to x. Nonsense! So, Python would return an error.</p>
 </section>
