--- a/programming/python/more-on-printing.html
+++ b/programming/python/more-on-printing.html
@@ -1,6 +1,7 @@
 ---
 layout: python
 title: More on Printing in Python
+permalink: /programming/python/more-on-printing/
 ---
 
 <h1>More on Printing</h1>
