--- a/programming/index.html
+++ b/programming/index.html
@@ -29,5 +29,5 @@ layout: default
     <h1>What is a Programming Language?</h1>
     <p>A programming language, put simply, is the format you write programs in. You can also think of it as a language that programmers communicate to computers with.</p>
     <p>In the programming world, programming languages often have specific use cases. For example, Python is used for data science and machine learning and JavaScript is used for websites.</p>
-    <p>At Learnmonkey, we teach have many different tutorials on a wide variety of programming languages.</p>
+    <p>At Learnmonkey, we have many different tutorials on a wide variety of programming languages.</p>
 </section>
