--- a/programming/index.html
+++ b/programming/index.html
@@ -9,9 +9,9 @@ layout: default
     <ul>
         <li><a href="/programming/python/">Python</a></li>
         <li><a href="/programming/java/">Java</a></li>
-        <li>HTML (coming soon!)</li>
-        <li>CSS (coming soon!)</li>
-        <li>JavaScript (coming soon!)</li>
+        <li><a href="/progamming/html/">HTML</a></li>
+        <li><a href="/programming/css/">CSS</a></li>
+        <li><a href="/programming/javascript/">JavaScript</a></li>
     </ul>
 </section>
 
