--- a/programming/javascript/index.html
+++ b/programming/javascript/index.html
@@ -20,7 +20,8 @@ layout: default
 <section>
     <h2>Prerequisites</h2>
     <ul>
-        <li>Knowledge of HTML and CSS</li>
+        <li>Knowledge of HTML</li>
         <li>Web Browser</li>
+        <li>Knowledge of CSS would be good, but not required</li>
     </ul>
 </section>
