--- a/programming/html/index.html
+++ b/programming/html/index.html
@@ -16,3 +16,11 @@ layout: default
     <h2>How can I run HTML?</h2>
     <p>Just open up your HTML page in the browser. Simple as that.</p>
 </section>
+
+<section>
+    <h2>Prerequisites</h2>
+    <ul>
+        <li>Basic computer skills</li>
+        <li>Web browser</li>
+    </ul>
+</section>
