sentence on java

--- a/programming/java/index.html
+++ b/programming/java/index.html
@@ -1,6 +1,12 @@
 ---
 layout: java
 title: Introduction to Java
+permalink: /programming/java/
 ---
 
-<!-- add this later -->
+<h1>Introduction to Java</h1>
+
+<section>
+    <h2>What is Java?</h2>
+    <p>Java is a programming language</p>
+</section>
