Update HTML and CSS tutorials

--- a/programming/css/index.html
+++ b/programming/css/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <section>
     <h2>What is CSS?</h2>
-    <p>CSS is used to make HTML websites look better. Using CSS, you can set fonts, font-sizes, colors, opacity, and a lot, lot more.</p>
+    <p>CSS, which stands for Cascading Style Sheets, is used to make HTML websites look better. Using CSS, you can set fonts, font-sizes, colors, opacity, and a lot, lot more.</p>
 </section>
 
 <section>
