--- a/programming/html/index.html
+++ b/programming/html/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <section>
     <h2>What is HTML?</h2>
-    <p>HTML is used universally to create websites and practically every website in the world uses a bit of HTML. Using HTML, you can create paragraphs, headings, menus, navbars and much more.</p>
+    <p>HTML, which stands for HyperText Markup Language, is used universally to create websites and practically every website in the world uses a bit of HTML. Using HTML, you can create paragraphs, headings, menus, navbars and much more.</p>
     <p>Admittedly, a website made only using HTML would be pretty boring. Pure HTML doesn't support navbars, menus, sidebars, etc. However, if we combine HTML with CSS and JavaScript we can make interactive websites.</p>
 </section>
 
