Add programming languages images

--- a/programming/java/index.html
+++ b/programming/java/index.html
@@ -9,4 +9,5 @@ permalink: /programming/java/
 <section>
     <h2>What is Java?</h2>
     <p>Java is a programming language</p>
+    <img src="/images/programming/java/java-logo.png" alt="Java Logo">
 </section>
