--- a/programming/javascript/index.html
+++ b/programming/javascript/index.html
@@ -10,6 +10,7 @@ layout: default
     <h2>What is JavaScript</h2>
     <p>Currently, our websites only have HTML and CSS. Sure, they look pretty, but when you do something, nothing happens. So boring. JavaScript is the key to making our websites interactive. Using JavaScript, we can do things like make something happen when a button is clicked, cookies for storage, and more.</p>
     <p>Unlike HTML and CSS, JavaScript is a real programming language. There are things like variables, loops, function and all the rest of the things you'd expect from a programming language.</p>
+    <img src="/images/programming/javascript/javascript-logo.png" alt="JavaScript Logo">
 </section>
 
 <section>
