--- a/programming/python/environment-setup.html
+++ b/programming/python/environment-setup.html
@@ -16,6 +16,6 @@ permalink: /programming/python/environment-setup/
 </section>
 
 <section>
-    <h2>Installing Visual Studio Code</h2>
-    <!-- To be added -->
+    <h2>Installing Sublime Text</h2>
+    <p>We need some place to run and write our code. So, we will be using Sublime Text, which is a easy-to-use code editor where we can easily run our Python code.</p>
 </section>
