installing sublime text environment setup p1

--- a/programming/python/environment-setup.html
+++ b/programming/python/environment-setup.html
@@ -9,13 +9,15 @@ permalink: /programming/python/environment-setup/
 
 <section>
     <h2>Installing Python</h2>
-    <p>First of all, we need to install Python. So, go to <a href="https://python.org">python.org/downloads</a>. Then, click the big yellow button:</p>
+    <p>Before you start setting up your environment, you, of course, will first need Python installed. If you don't already have it, see our <a href="/installing-python">Installing Python</a> guide.</a></p>
+    <!-- <p>First of all, we need to install Python. So, go to <a href="https://python.org">python.org/downloads</a>. Then, click the big yellow button:</p>
     <img src="/images/programming/python/python-org-downloads-screenshot.png" alt="Python downloads website screenshot">
     <p>After that, the Python installer should be installed on your computer. Simply run the installer and go through all the steps. For a more detailed explanation of the Python installation process, click <a href="/python/installing-python.html">here</a>. After that, Python will be installed. To check if Python has been installed or not, simply type in "Python" in the Windows search bar and see if Python comes up.</p>
-    <img src="/images/programming/python/python-search-bar.png" alt="Python in the Windows Search Bar">
+    <img src="/images/programming/python/python-search-bar.png" alt="Python in the Windows Search Bar"> -->
 </section>
 
 <section>
     <h2>Installing Sublime Text</h2>
-    <p>We need some place to run and write our code. So, we will be using Sublime Text, which is a easy-to-use code editor where we can easily run our Python code.</p>
+    <p>After getting Python, you will also need a text editor. <a href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
+    <!-- To be added -->
 </section>
