--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -20,4 +20,6 @@ permalink: /programming/python/your-first-python-program/
     <img src="/images/programming/python/sublime-text-2.PNG" alt="Sublime Text Save Window">
     <p>Navigate to the folder you want your program to be in and enter a name for the text. It's important that the file ends in ".py". I'm calling mine <var>helloworld.py</var>.</p>
     <p>To run the program, press the Ctrl and B keys and choose "Python". You should see <samp>Hello World!</samp> printed at the bottom.</p>
+    <img src="/images/programming/python/sublime-text-3.PNG" alt="Sublime Text Runned Python Program">
 </section>
+
