--- a/programming/python/environment-setup.html
+++ b/programming/python/environment-setup.html
@@ -21,5 +21,5 @@ permalink: /programming/python/environment-setup/
     <p>After getting Python, you will also need a text editor. <a target="_blank" href="https://www.sublimetext.com">Sublime Text</a> is a great and easy-to-use text editor that we will be installing in this tutorial.</a></p>
     <p>After navigating to the <a href="https://www.sublimetext.com/download" target="_blank">Download</a> page, you will want to download the file for your computer. Once the file is downloaded, simply run it and go through all of the prompts. At the end, if it closes successfully, you should have Sublime Text installed correctly!</a></p>
     <p>To Open Sublime Text, just find it as you would any other app.</p>
-    <p>Congratulations! It's time to start coding!</p>
+    <h3>Congratulations! It's time to start coding!</h3>
 </section>
