--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -23,3 +23,10 @@ permalink: /programming/python/your-first-python-program/
     <img src="/images/programming/python/sublime-text-3.PNG" alt="Sublime Text Runned Python Program">
 </section>
 
+<section>
+    <h2>Code Breakdown</h2>
+    <p>Time for a breakdown of what we just did. Below is the code:</p>
+    <p><code><pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span></pre></code></p>
+    <p>The <code>print</code> tells Python that we want to print something. The brackets tell Python that it's a function. You'll learn more about functions in a later tutorial. Finally, the quotes tell Python that there will be some text. In the program, we used double quotes, but could've just as easily used single quotes.</p>
+    <small>Note: if you're using single quotes, remember to replace both double quotes with single quotes. If you don't Python will give you an error.</small>
+</section>
