--- a/programming/python/your-first-python-program.html
+++ b/programming/python/your-first-python-program.html
@@ -10,17 +10,17 @@ permalink: /programming/python/your-first-python-program/
 <section>
     <h2>Writing the Program</h2>
     <p>To write our very first program, we will be using our freshly installed Sublime Text. First, open up Sublime Text, and you should the following screen: </p>
-    <img src="/images/programming/python/sublime-text-1.PNG" alt="Empty Sublime Text window">
+    <img src="/images/programming/python/sublime-text-1.png" alt="Empty Sublime Text window">
     <p>Inside of it, write <code><pre style='color:#000000;background:#ffffff;'><span style='color:#800000; font-weight:bold; '>print</span><span style='color:#808030; '>(</span><span style='color:#0000e6; '>"Hello World!"</span><span style='color:#808030; '>)</span></pre></code></p>
 </section>
 
 <section>
     <h2>Running the Program</h2>
     <p>Now, we need to save our Python program. To do this, press the Ctrl and S keys. You should see a window like the following pop up: </p>
-    <img src="/images/programming/python/sublime-text-2.PNG" alt="Sublime Text Save Window">
+    <img src="/images/programming/python/sublime-text-2.png" alt="Sublime Text Save Window">
     <p>Navigate to the folder you want your program to be in and enter a name for the text. It's important that the file ends in ".py". I'm calling mine <var>helloworld.py</var>.</p>
     <p>To run the program, press the Ctrl and B keys and choose "Python". You should see <samp>Hello World!</samp> printed at the bottom.</p>
-    <img src="/images/programming/python/sublime-text-3.PNG" alt="Sublime Text Runned Python Program">
+    <img src="/images/programming/python/sublime-text-3.png" alt="Sublime Text Runned Python Program">
 </section>
 
 <section>
