quick fix on wording in tutorial

--- a/programming/python/more-on-printing.html
+++ b/programming/python/more-on-printing.html
@@ -5,7 +5,7 @@ permalink: /programming/python/more-on-printing/
 ---
 
 <h1>More on Printing</h1>
-<p>In the last tutorial, we learned that we could print stuff into the command line by using the word <code>print</code>. In this tutorial, we'll learn a bit more about printing.</p>
+<p>In the last tutorial, we learned that we could print stuff into the terminal by using the word <code>print</code>. In this tutorial, we'll learn a bit more about printing.</p>
 
 <section>
     <h2>Printing Multiple Things at a Time</h2>
