--- a/programming/python/more-on-printing.html
+++ b/programming/python/more-on-printing.html
@@ -5,13 +5,13 @@ permalink: /programming/python/more-on-printing/
 ---
 
 <h1>More on Printing</h1>
-<p>In the last tutorial, we learned that we could print stuff into the terminal by using the word <code>print</code>. In this tutorial, we'll learn a bit more about printing.</p>
+<p>In the last tutorial, we learned that we could print stuff into the command line by using the word <code>print</code>. In this tutorial, we'll learn a bit more about printing.</p>
 
 <section>
     <h2>Printing Multiple Things at a Time</h2>
     <p>We can give <code>print</code> two things to print by separating them by commas.</p>
     <p>For example, we can do <code>print("Hello", "World!")</code>. In the command line, it prints out <code>Hello World!</code>.</p>
-    <p>If you noticed, Python put a space between the words. If we don't want the space, we use <var>sep</var>, which stands for seperator. Going back to the Hello World exmaple, we do <code>print("Hello", "World", sep="")</code> and we get back <samp>HelloWorld</samp>.</p>
+    <p>If you noticed, Python put a space between the words. If we don't want the space, we use <var>sep</var>, which stands for seperator. Going back to the Hello World example, we do <code>print("Hello", "World", sep="")</code> and we get back <samp>HelloWorld</samp>.</p>
 </section>
 
 <section>
