use <samp> not <code>

--- a/programming/python/more-on-printing.html
+++ b/programming/python/more-on-printing.html
@@ -10,7 +10,7 @@ permalink: /programming/python/more-on-printing/
 <section>
     <h2>Printing Multiple Things at a Time</h2>
     <p>We can give <code>print</code> two things to print by separating them by commas.</p>
-    <p>For example, we can do <code>print("Hello", "World!")</code>. In the command line, it prints out <code>Hello World!</code>.</p>
+    <p>For example, we can do <code>print("Hello", "World!")</code>. In the command line, it prints out <samp>Hello World!</samp>.</p>
     <p>If you noticed, Python put a space between the words. If we don't want the space, we use <var>sep</var>, which stands for seperator. Going back to the Hello World example, we do <code>print("Hello", "World", sep="")</code> and we get back <samp>HelloWorld</samp>.</p>
 </section>
 
