--- a/about.html
+++ b/about.html
@@ -17,6 +17,11 @@ layout: default
 </section>
 
 <section>
+    <h2>Translating</h2>
+    <p>Currently, Learnmonkey is only available in English, but we are currently working on <a href="/zh">a translation in Chinese</a>.</p>
+</section>
+
+<section>
     <h2>Donating</h2>
     <p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity.</p>
 </section>
