--- a/404.html
+++ b/404.html
@@ -24,4 +24,5 @@ layout: default
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
   <p>Try checking the spelling.</p>
+  <p>If you think this is an error, please <a href="mailto:learnmonkey2@gmail.com">contact us</a>.</p>
 </div>
