more on why you want variables

--- a/programming/python/variables.html
+++ b/programming/python/variables.html
@@ -15,7 +15,7 @@ permalink: /programming/python/variables/
 <section>
     <h2>Why use Variables?</h2>
     <p>You might think that variables are super useless, but they are one of the most important things in all of programming. Why?</p>
-    <p>Well, imagine you were programming a 2d-game. When making games, you need to know the position of the player. But you can't know the position. The player decides that. So, you put the position in a variable.</p>
+    <p>Well, imagine you were programming a 2d-game. When making games, you need to know the position of the player. But you can't know the position. The player decides that. So, you put the position in a variable. Instead of checking the player's position every single time you need to check for collision, etc, you cna just access the variable you have instead of using a long function to get the position of the player.</p>
 </section>
 
 <section>
