--- a/programming/css/index.html
+++ b/programming/css/index.html
@@ -14,7 +14,7 @@ layout: css
 
 <section>
     <h2>How do I run CSS?</h2>
-    <p>You can directly put it in your HTML files or create a new file for the CSS and reference it from the HTML.</p>
+    <p>You can directly put it in your HTML files or create a new file for the CSS and reference it from the HTML. We will setup our CSS in the next lesson.</p>
 </section>
 
 <section>
