--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -1,6 +1,6 @@
 ---
-title: Introduction to CSS
-permalink: /programming/css/
+title: Setting Up CSS
+permalink: /programming/css/setup-css
 layout: css
 ---
 
