--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -17,9 +17,6 @@ layout: css
 </section>
 
 <section>
-    <h2>Prerequisites</h2>
-    <ul>
-        <li>Knowledge of HTML</li>
-        <li>A web browser</li>
-    </ul>
+    <h2>Checking If It Works</h2>
+    <p>Once you have CSS added into your HTMl, add the following code into the CSS file:</p>
 </section>
