head into the <code> tag

--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -8,7 +8,7 @@ layout: css
 
 <section>
     <h2>How do I setup CSS?</h2>
-    <p>It is actually very easy to get CSS setup. To do that, firstly, make a file in the same directory as your <code>index.html</code> file. Then, in your index.html file, add the following code into your <code>&60;html&62;</code>:</p>
+    <p>It is actually very easy to get CSS setup. To do that, firstly, make a file in the same directory as your <code>index.html</code> file. Then, in your index.html file, add the following code into your <code><head></code>:</p>
 </section>
 
 <section>
