add the word "basic"

--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -8,7 +8,7 @@ layout: /programing/python/data-types/
 
 <section>
     <h2>What is a Data Type?</h2>
-    <p>In Python, the data stored in variables can be stored in many different forms. These forms are called <strong>data types</strong>. There are two different types of data types: the default ones and the custom ones. This tutorial will be covering common default data types.</p>
+    <p>In Python, the data stored in variables can be stored in many different forms. These forms are called <strong>data types</strong>. There are two different types of data types: the default ones and the custom ones. This tutorial will be covering basic and common default data types.</p>
 </section>
 
 <section>
