--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -1,10 +1,10 @@
 ---
 layout: python
-title: Introduction to Python
+title: Data Types in Python
 layout: /programming/python/data-types/
 ---
 
-<h1>Data Types</h1>
+<h1>Data Types in Python</h1>
 
 <section>
     <h2>What is a Data Type?</h2>
