permalink not layout

--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -1,7 +1,7 @@
 ---
 layout: python
 title: Data Types in Python
-layout: /programming/python/data-types/
+permalink: /programming/python/data-types/
 ---
 
 <h1>Data Types in Python</h1>
