--- a/programming/python/arithmetic.html
+++ b/programming/python/arithmetic.html
@@ -1,7 +1,7 @@
 ---
 layout: python
 title: Python Arithmetic
-layout: /programming/python/arithmetic/
+permalink: /programming/python/arithmetic/
 ---
 
 <h1>Python Arithmetic</h1>
