change the code in the css tutorial again wahhhhhhhhhhh :(

--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -8,7 +8,7 @@ layout: css
 
 <section>
     <h2>How do I setup CSS?</h2>
-    <p>It is actually very easy to get CSS setup. To do that, firstly, make a file in the same directory as your <code>index.html</code> file. Then, in your index.html file, add the following code into your <code><pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>head</span><span style='color:#a65700; '>></span></pre></code>:</p>
+    <p>It is actually very easy to get CSS setup. To do that, firstly, make a file in the same directory as your <code>index.html</code> file. Then, in your index.html file, add the following code into your <code style='color:#000000;><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>head</span><span style='color:#a65700; '>></span></code>:</p>
 </section>
 
 <section>
