--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -19,5 +19,5 @@ layout: css
 
 <section>
     <h2>Checking If It Works</h2>
-    <p>Once you have CSS added into your HTMl, add the following code into the CSS file:</p>
+    <p>Once you have CSS added into your HTML, add the following code into the CSS file:</p>
 </section>
