expand comments tutorial

--- a/programming/python/comments.html
+++ b/programming/python/comments.html
@@ -13,8 +13,10 @@ permalink: /programming/python/comments/
 
 <section>
     <h2>Single-Line Comments</h2>
+    <p>To do single-line comments in Python, we simply put a number sign (<code>#</code>) in front of it. For example, if we run <code>#print("Hello World!")</code>, Python won't do anything.</p>
 </section>
 
 <section>
     <h2>Multi-Line Comments</h2>
+    <p>To make a multiline comment, wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). If we do <code>'''print("Hello World!")'''</code>, Python again won't do anything.</p>
 </section>
