--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -15,4 +15,8 @@ layout: css
 <section>
     <h2>Checking If It Works</h2>
     <p>Once you have CSS added into your HTML, add the following code into the CSS file:</p>
+    <code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span>
+        <span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span>
+      <span style='color:#800080; '>}</span>
+    </code>
 </section>
