Multiline not Multi-Line

--- a/programming/python/comments.html
+++ b/programming/python/comments.html
@@ -17,6 +17,6 @@ permalink: /programming/python/comments/
 </section>
 
 <section>
-    <h2>Multi-Line Comments</h2>
+    <h2>Multiline Comments</h2>
     <p>To make a multiline comment, wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). If we do <code>'''print("Hello World!")'''</code>, Python again won't do anything.</p>
 </section>
