--- a/programming/python/comments.html
+++ b/programming/python/comments.html
@@ -18,5 +18,5 @@ permalink: /programming/python/comments/
 
 <section>
     <h2>Multiline Comments</h2>
-    <p>To make a multiline comment, wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). If we do <code>'''print("Hello World!")'''</code>, Python again won't do anything.</p>
+    <p>To make a multiline comment (one spanning multiple lines), wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). If we do <code>'''print("Hello World!")'''</code>, Python again won't do anything.</p>
 </section>
