--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -19,4 +19,8 @@ layout: css
         <span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
       <span style='color:#800080; '>}</span>
     </code>
+    <p>Now, instead of your page looking like this: </p>
+    <!--insert serif website image-->
+    <p>It should look like this: </p>
+    <!--insert sans-serif website image-->
 </section>
