more errors due to stupid html stuff god damn it

--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -16,11 +16,7 @@ layout: css
     <h2>Checking If It Works</h2>
     <p>Once you have CSS added into your HTML, add the following code into the CSS file:</p>
     <code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span><br>
-        <span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;<span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
       <span style='color:#800080; '>}</span>
     </code>
-    <p>Now, instead of your page looking like this: </p>
-    <!--insert serif website image-->
-    <p>It should look like this: </p>
-    <!--insert sans-serif website image-->
 </section>
