--- a/donating.html
+++ b/donating.html
@@ -5,4 +5,4 @@ layout: default
 ---
 
 <h1>Donating to Learnmonkey</h1>
-<p>Currently, Learnmonkey does not accept donations, although we plan to in the future. In the meantime, consider contributing to a local charity.</p>
+<p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity.</p>
