--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -18,5 +18,9 @@ layout: css
     <code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span><br>
         &nbsp;&nbsp;&nbsp;&nbsp;<span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
       <span style='color:#800080; '>}</span>
+      <p>Now, instead of your page looking like this: </p>
+      <img src="/images/programming/css/serif-website.png" alt="Serif Website">
+      <p>It should look like this: </p>
+      <img src="/images/programming/css/sans-serif-website.png" alt="Sans-Serif Website">
     </code>
 </section>
