change image style to change dimenstions screw calgary34 aka aaron >:(

--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -21,6 +21,6 @@ layout: css
       <p>Now, instead of your page looking like this: </p>
       <img src="/images/programming/css/serif-website.png" alt="Serif Website">
       <p>It should look like this: </p>
-      <img src="/images/programming/css/sans-serif-website.png" alt="Sans-Serif Website">
+      <img src="/images/programming/css/sans-serif-website.png" style="height: 40%;width:40%;" alt="Sans-Serif Website">
     </code>
 </section>
