setup css tutorial done! (unless there are typos fudgestickaroos)

--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -23,4 +23,5 @@ layout: css
       <p>It should look like this: </p>
       <img src="/images/programming/css/sans-serif-website.png" style="height: 40%;width:40%;" alt="Sans-Serif Website">
     </code>
+    <p>We will discuss how this works in the next lesson.</p>
 </section>
