--- a/programming/css/setup-css.html
+++ b/programming/css/setup-css.html
@@ -8,7 +8,7 @@ layout: css
 
 <section>
     <h2>How do I setup CSS?</h2>
-    <p>It is actually very easy to get CSS setup. To do that, firstly, make a file in the same directory as your <code>index.html</code> file called <code>style.css</code>. This is where all of our CSS will go. Then, in your index.html file, add the following code into your <code style='color:#000000;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>head</span><span style='color:#a65700; '>></span></code>:</p>
+    <p>It is actually very easy to get CSS setup. To do that, first, make a file in the same directory as your <code>index.html</code> file called <code>style.css</code>. This is where all of our CSS will go. Then, in your index.html file, add the following code into your <code style='color:#000000;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>head</span><span style='color:#a65700; '>></span></code>:</p>
     <code style='color:#000000;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"style.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#274796; '> </span><span style='color:#074726; '>type</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"text/css"</span><span style='color:#274796; '> </span><span style='color:#a65700; '>/></span></code>
 </section>
 
