--- a/programming/css/how-css-works.html
+++ b/programming/css/how-css-works.html
@@ -5,8 +5,7 @@ layout: css
 ---
 
 <h1>How CSS Works</h1>
-
-<section>
-    <h2>How Does CSS Work?</h2>
-    <p>In the last lesson, we got CSS linked into our site and we changed the font. In this lesson, we'll go over how CSS works and some other ways to use CSS.</p>
-</section>
+<p>In the last lesson, we got CSS linked into our site and we changed the font. In this lesson, we'll go over how CSS works and some other ways to use CSS. Below was our code: </p>
+<code style='color:#000000;'><span style='color:#800000; font-weight:bold; '>body</span> <span style='color:#800080; '>{</span><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;<span style='color:#bb7977; font-weight:bold; '>font-family</span><span style='color:#808030; '>:</span> <span style='color:#074726; '>sans-serif</span><span style='color:#800080; '>;</span><br>
+      <span style='color:#800080; '>}</span></code>
