learnmonkey is open source

--- a/about.html
+++ b/about.html
@@ -25,3 +25,8 @@ layout: default
     <h2>Donating</h2>
     <p>Learnmonkey doesn't have ads and will remain without ads. Currently, we do not accept donations, but in the future we will. In the meantime, consider contributing to a local charity.</p>
 </section>
+
+<section>
+    <h2>Learnmonkey is Open Source!</h2>
+    <p>Learnmonkey is an open source project and it is licensed under the BSD 3-Clause  License.</p>
+</section>
