--- a/programming/python/more-on-printing.html
+++ b/programming/python/more-on-printing.html
@@ -22,7 +22,7 @@ print("World")</code></pre> we see: <pre><samp>
 Hello
 World
     </samp></pre></p>
-    <p>Well, what if we don't want the newline at the end? It's actuasly very simple. Going back to our Hello World example, we change it to 
+    <p>Well, what if we don't want the newline at the end? It's actually very simple. Going back to our Hello World example, we change it to 
         <pre><code>print("Hello", end="")
 print("World", end="")</code></pre> we get <samp>HelloWorld</samp>.
     </p>
