--- a/programming/python/flask/index.html
+++ b/programming/python/flask/index.html
@@ -8,6 +8,6 @@ permalink: /programming/python/flask/
 
 <section>
     <h2>What is Flask?</h2>
-    <p>Flask is a super lightweight microframework for creating web applications for Python. It's super easy to get started.</p>
+    <p>Flask is a super lightweight microframework for creating web applications with Python. It's super easy to get started.</p>
     <img src="/images/programming/python/flask/flask-logo.png" alt="Flask Logo">
 </section>
