dude @calgary34 you forgot NoneType........

--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -34,6 +34,11 @@ permalink: /programming/python/data-types/
 </section>
 
 <section>
+    <h2>None</h2>
+    <p><code>None</code> is actually its own data type, called "NoneType". It may seem awkward since None is like a Boolean, but None is actually very different.</p>
+</section>
+
+<section>
     <h2>Getting the Type</h2>
     <p>Now let's say that we want to get the type of something. To do this, we type <code>type()</code>, where you put the variable you want to get the type of in the brackets.</p>
 </section>
